# loom

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md
src/: config.rs  main.rs  shim.rs
src/cmd/: config.rs  info.rs  install.rs  list.rs  mod.rs  rebuild.rs  shim.rs  status.rs  uninstall.rs  upgrade.rs
src/runtime/: mod.rs  node.rs  python.rs
test-toml/: Cargo.toml
test-toml/src/: main.rs
