[package]
name = "loom"
version = "0.1.0"
edition = "2021"
description = "Loom — project-local toolchain manager for Node and Python. Like mise, but project-scoped."
license = "MIT"
authors = ["Loom Authors"]

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
which = "7.0"
dirs = "5.0"
colored = "3.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
